views editor:fix long collapse animation

--- a/src/main/scss/components/integration/view-tree/_all.scss
+++ b/src/main/scss/components/integration/view-tree/_all.scss
@@ -42,7 +42,6 @@
 		cursor: default;
 		background-color: #fff;
 		@include user-select(none);
-		transition: all 03s ease;
 
 		.asc-minus
 		{
